# annotation-extractor-mcp

./: .gitignore  README.md  pyproject.toml
.claude/correct-habits/: last-response.json
skills/ereader-annotations/: SKILL.md
src/annotation_extractor/: __init__.py  models.py  registry.py  server.py
src/annotation_extractor/backends/: base.py  boox.py  kindle.py  kobo.py
tests/: test_boox.py  test_kindle.py  test_kobo.py  test_registry.py
