[project]
name = "annotation-extractor"
version = "0.3.0"
description = "MCP server for extracting annotations and highlights from e-readers (Kobo, Kindle, Boox)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Rohit Kaushik" }]
keywords = ["ereader", "kobo", "kindle", "boox", "mcp", "annotations", "highlights", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.2.0"]

[project.scripts]
annotation-extractor = "annotation_extractor.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/annotation_extractor"]

[tool.uv]
dev-dependencies = ["pytest", "pytest-asyncio"]
